# trip

./: .env.example  .gitignore  China travel.md  Plan.md  README.md  Trip.md  alembic.ini  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: auth.py  commerce.py  communications.py  markets.py  orders.py  plans.py  profiles.py  role_visibility.py  system.py  users.py
backend/app/core/: config.py  errors.py  middleware.py  permissions.py  responses.py  security.py
backend/app/repositories/: auth.py  commerce.py  communications.py  markets.py  notifications.py  orders.py  plans.py  profiles.py  role_visibility.py
backend/app/schemas/: auth.py  commerce.py  communications.py  markets.py  orders.py  plans.py  profiles.py  role_visibility.py
backend/app/services/: commission.py  notifications.py
backend/tests/: test_auth.py  test_health.py  test_markets.py
database/: ERD.md  README.md  seed_plan.md
database/alembic/: env.py
database/alembic/versions/: 0001_initial_schema.py  0002_auth_tokens_and_invitations.py  0003_milestone_6_order_flow.py  0004_role_visibility_calendar.py  0005_route_service_modes.py
database/migrations/: 0001_initial_schema.sql  0002_auth_tokens_and_invitations.sql  0003_milestone_6_order_flow.sql  0004_role_visibility_calendar.sql  0005_route_service_modes.sql
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/app/: App.tsx
frontend/src/imports/: Plan.md
scripts/: e2e_smoke.py  local_ci.sh
(+19 files in other folders)
